fix: update Makefile to use correct environment file paths for secrets
- Fix Cloud Scheduler cron job failures by correcting environment file
references
- Update set-secrets-staging and set-secrets-prod targets to use .env
instead of .env.staging/.env.production
- Ensure Edge Functions can access required environment variables
(DB_URL, ENCRYPTION_KEY, etc.)
- Resolve HTTP 500 errors in check-secrets and process-reminders
functions
- Maintain dead man's switch reliability by fixing automated secret
checking and reminder processing

--- a/supabase/Makefile
+++ b/supabase/Makefile
@@ -124,18 +124,18 @@ deploy-prod: deploy-config-prod set-secrets-prod deploy-functions-prod deploy-db
 # Set secrets for Edge Functions
 set-secrets-staging: link-staging
 	@echo "🔐 Setting secrets for staging Edge Functions..."
-	supabase secrets set DB_URL="$$(grep DB_URL .env.staging | cut -d'=' -f2-)"
-	supabase secrets set ENCRYPTION_KEY="$$(grep ENCRYPTION_KEY .env.staging | cut -d'=' -f2-)"
-	supabase secrets set SERVICE_ROLE_KEY="$$(grep SUPABASE_SERVICE_ROLE_KEY .env.staging | cut -d'=' -f2-)"
-	supabase secrets set SENDGRID_API_KEY="$$(grep SENDGRID_API_KEY .env.staging | cut -d'=' -f2-)"
-	supabase secrets set SITE_URL="$$(grep NEXT_PUBLIC_SITE_URL .env.staging | cut -d'=' -f2-)"
+	supabase secrets set DB_URL="$$(grep DB_URL .env | cut -d'=' -f2-)"
+	supabase secrets set ENCRYPTION_KEY="$$(grep ENCRYPTION_KEY .env | cut -d'=' -f2-)"
+	supabase secrets set SERVICE_ROLE_KEY="$$(grep SUPABASE_SERVICE_ROLE_KEY .env | cut -d'=' -f2-)"
+	supabase secrets set SENDGRID_API_KEY="$$(grep SENDGRID_API_KEY .env | cut -d'=' -f2-)"
+	supabase secrets set SITE_URL="$$(grep NEXT_PUBLIC_SITE_URL .env | cut -d'=' -f2-)"
 	@echo "✅ Secrets set for staging!"
 
 set-secrets-prod: link-prod
 	@echo "🔐 Setting secrets for production Edge Functions..."
-	supabase secrets set DB_URL="$$(grep DB_URL .env.production | cut -d'=' -f2-)"
-	supabase secrets set ENCRYPTION_KEY="$$(grep ENCRYPTION_KEY .env.production | cut -d'=' -f2-)"
-	supabase secrets set SERVICE_ROLE_KEY="$$(grep SUPABASE_SERVICE_ROLE_KEY .env.production | cut -d'=' -f2-)"
-	supabase secrets set SENDGRID_API_KEY="$$(grep SENDGRID_API_KEY .env.production | cut -d'=' -f2-)"
-	supabase secrets set SITE_URL="$$(grep NEXT_PUBLIC_SITE_URL .env.production | cut -d'=' -f2-)"
+	supabase secrets set DB_URL="$$(grep DB_URL .env | cut -d'=' -f2-)"
+	supabase secrets set ENCRYPTION_KEY="$$(grep ENCRYPTION_KEY .env | cut -d'=' -f2-)"
+	supabase secrets set SERVICE_ROLE_KEY="$$(grep SUPABASE_SERVICE_ROLE_KEY .env | cut -d'=' -f2-)"
+	supabase secrets set SENDGRID_API_KEY="$$(grep SENDGRID_API_KEY .env | cut -d'=' -f2-)"
+	supabase secrets set SITE_URL="$$(grep NEXT_PUBLIC_SITE_URL .env | cut -d'=' -f2-)"
 	@echo "✅ Secrets set for production!"
