--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -7,8 +7,14 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_ANON_KEY
 NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project-id.supabase.co
 NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
 
+BTCPAY_API_KEY="your-btcpay-api-key"
+BTCPAY_SERVER_URL=https://your-btcpay-server.com
+BTCPAY_STORE_ID="your-btcpay-store-id"
+BTCPAY_WEBHOOK_SECRET="your-btcpay-webhook-secret"
+
 SENDGRID_ADMIN_EMAIL=
 SENDGRID_API_KEY=
 SENDGRID_SENDER_NAME=
+
 SUPABASE_PROJECT_ID=
 SUPABASE_SEED_DB=true
