--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -51,3 +51,6 @@ NEXT_PUBLIC_DEBUG=true
 DISABLE_AUTH_REDIRECT=true
 SKIP_EMAIL_VERIFICATION=true
 MOCK_PAYMENTS=true
+
+# Cron Authentication (for Google Cloud Scheduler)
+CRON_SECRET=local-test-secret-change-in-production
