fix: exclude only root-level db directory in .gcloudignore
The pattern 'db/' was excluding ALL db directories including frontend/src/lib/db/
Changed to '/db/' to only exclude the root-level db directory
This fixes Cloud Build failures with missing module errors

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -54,7 +54,8 @@ tasks.md
 
 # Scripts and database files (not needed for frontend)
 scripts/
-db/
+# Only exclude root-level db directory, not frontend/src/lib/db
+/db/
 memory-bank/
 
 # Temporary files
