fix: ensure environment variables are available during Docker build
- Copy .env.staging to both .env and .env.production for Next.js compatibility
- Add dummy values for required build-time environment variables
- Add debug output to verify environment files during build
- Ensure NEXTAUTH_URL and other auth variables are set for build

--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -8,11 +8,30 @@ NEXT_PUBLIC_AUTH_PROVIDER=google
 NEXT_PUBLIC_DATABASE_PROVIDER=cloudsql
 NEXT_PUBLIC_BTCPAY_SERVER_URL=https://btcpay.keyfate.com
 
-BTCPAY_API_KEY="your-btcpay-api-key"
-BTCPAY_SERVER_URL=https://your-btcpay-server.com
-BTCPAY_STORE_ID="your-btcpay-store-id"
-BTCPAY_WEBHOOK_SECRET="your-btcpay-webhook-secret"
+# NextAuth configuration (needed for build even though not NEXT_PUBLIC)
+NEXTAUTH_URL=https://staging.keyfate.com
+NEXTAUTH_SECRET="dummy-secret-for-build"
 
+# Google OAuth (dummy values for build - real ones come from Secret Manager at runtime)
+GOOGLE_CLIENT_ID="dummy-client-id-for-build"
+GOOGLE_CLIENT_SECRET="dummy-client-secret-for-build"
+
+# Database URL (dummy for build - real one comes from Secret Manager at runtime)
+DATABASE_URL="postgresql://dummy@localhost/dummy"
+
+# Encryption key (dummy for build - real one comes from Secret Manager at runtime)
+ENCRYPTION_KEY="dummy-encryption-key-for-build"
+
+# Stripe (dummy for build - real one comes from Secret Manager at runtime)
+STRIPE_SECRET_KEY="sk_test_dummy"
+
+# BTCPay (dummy values for build - real ones come from Secret Manager at runtime)
+BTCPAY_API_KEY="dummy-btcpay-api-key"
+BTCPAY_SERVER_URL=https://btcpay.keyfate.com
+BTCPAY_STORE_ID="dummy-btcpay-store-id"
+BTCPAY_WEBHOOK_SECRET="dummy-btcpay-webhook-secret"
+
+# SendGrid (optional)
 SENDGRID_ADMIN_EMAIL=
 SENDGRID_API_KEY=
 SENDGRID_SENDER_NAME=
