fix: drastically reduce Cloud Build upload size by excluding caches
Critical fix to exclude massive directories from Cloud Build uploads:
- Exclude .terragrunt-cache directories (2.2GB!)
- Exclude all node_modules anywhere in tree (1GB+)
- Exclude .next build artifacts (291MB)
- Exclude terraform state files and caches

This should reduce the upload from 2.5GB / 51,000 files to just the
essential source code needed for the build (~10MB / <1000 files).

This will dramatically speed up Cloud Build submission time.

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -2,20 +2,32 @@
 .git/
 .gitignore
 
-# Node modules and package managers
+# Node modules and package managers (anywhere in the tree)
+**/node_modules/
 node_modules/
 .pnpm-store/
 .npm/
 .yarn/
 
-# Build artifacts and caches
+# Build artifacts and caches (anywhere in the tree)
+**/.next/
 .next/
+**/dist/
 dist/
+**/build/
 build/
 .turbo/
 .cache/
 coverage/
 .nyc_output/
+# Terraform and Terragrunt caches (CRITICAL - these are huge!)
+**/.terragrunt-cache/
+.terragrunt-cache/
+**/.terraform/
+.terraform/
+*.tfstate
+*.tfstate.*
+*.tfplan
 
 # Development and IDE files
 .vscode/
@@ -92,6 +104,7 @@ __tests__/
 *.spec.js
 *.spec.ts
 *.spec.tsx
+
 
 # Development config files
 .eslintrc*
