fix: resolve Google OAuth redirect to 0.0.0.0 in staging environment
- Pass NEXTAUTH_URL and NEXT_PUBLIC_SITE_URL as build arguments to Docker/Cloud Build
- Set environment variables during Next.js build process for proper URL resolution
- Add trustHost option to NextAuth config to trust proxy headers from Cloud Run
- Update NextAuth route handlers to accept context parameter for App Router compatibility
- Add runtime safety net to rewrite any 0.0.0.0 URLs in redirect Location headers
- Remove duplicate Google OAuth callback route that caused redirect loop
- Exclude local .env files from Docker image via .dockerignore
- Configure Cloud Run with NEXTAUTH_URL_INTERNAL and AUTH_TRUST_HOST variables

--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -48,6 +48,8 @@ CHANGELOG.md
 docs
 
 # Environment files (we handle these separately)
+.env
+.env.production
 .env.local
 .env.development
 .env.test
