--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -32,6 +32,8 @@ steps:
       - '--target=builder'
       - '--platform=linux/amd64'
       - '--build-arg=BUILD_ENV=${_BUILD_ENV}'
+      - '--build-arg=NEXTAUTH_URL=${_NEXTAUTH_URL}'
+      - '--build-arg=NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL}'
       - '-t=${_IMAGE_URL}-cache-builder'
       - '-f=frontend/Dockerfile'
       - './frontend'
@@ -45,6 +47,8 @@ steps:
       - '--cache-from=${_IMAGE_URL}'
       - '--platform=linux/amd64'
       - '--build-arg=BUILD_ENV=${_BUILD_ENV}'
+      - '--build-arg=NEXTAUTH_URL=${_NEXTAUTH_URL}'
+      - '--build-arg=NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL}'
       - '-t=${_IMAGE_URL}'
       - '-f=frontend/Dockerfile'
       - './frontend'
