--- a/frontend/docker-compose.pooling.yml
+++ b/frontend/docker-compose.pooling.yml
@@ -7,7 +7,7 @@ services:
     environment:
       DATABASES_HOST: ${DB_HOST:-127.0.0.1}
       DATABASES_PORT: ${DB_PORT:-5432}
-      DATABASES_DBNAME: ${DB_NAME:-keyfate}
+      DATABASES_DBNAME: ${DB_NAME:-keyfate}  # Both staging and prod use 'keyfate' database
       DATABASES_USER: ${DB_USER:-keyfate_app}
       DATABASES_PASSWORD: ${DB_PASSWORD}
       POOL_MODE: transaction
