--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -10,3 +10,18 @@ OPENROUTER_API_KEY="YOUR_OPENROUTER_KEY_HERE"         # Optional, for OpenRouter
 AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure OpenAI models (requires endpoint in .taskmaster/config.json).
 OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.
 GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
+
+# Email Configuration
+# Email provider selection: "sendgrid" (production) or "mock" (development/testing)
+EMAIL_PROVIDER="sendgrid"                             # Optional: Defaults to "mock" in development, "sendgrid" in production
+
+# SendGrid Configuration (Required for SendGrid provider)
+SENDGRID_API_KEY="SG.your_sendgrid_api_key_here"     # Required for SendGrid: Get from SendGrid dashboard. Format: SG.***
+SENDGRID_ADMIN_EMAIL="noreply@example.com"           # Required for SendGrid: Verified sender email address
+SENDGRID_SENDER_NAME="Dead Man's Switch"             # Optional: Display name for emails. Default: "Dead Man's Switch"
+
+# Admin Notifications
+ADMIN_ALERT_EMAIL="support@aviat.io"                 # Optional: Email for system alerts and admin notifications. Default: "support@aviat.io"
+
+# Cron Job Security
+CRON_SECRET="your_secure_random_string_here"         # Required: Secret for authenticating cron job requests (minimum 16 characters recommended)
