feat: implement comprehensive test monitoring and debugging infrastructure (Task 30)
Implemented comprehensive test suite debugging and monitoring system with
automated failure categorization, performance tracking, and actionable
debugging information.

## Test Monitoring Components Implemented

### Core Infrastructure (7 components)
- **TestLogger**: Configurable logging with timestamp formatting and log levels
- **TestAnalytics**: Test execution tracking, success rates, and failure analysis
- **TestDebugger**: Error categorization and actionable debugging suggestions
- **PerformanceMonitor**: Execution time tracking and bottleneck detection
- **FailureCategorizor**: Automated pattern-based error categorization
- **TestReporter**: Comprehensive report generation (JSON/Markdown)
- **TestMonitor**: Unified coordinator integrating all monitoring components

### Key Features
- Automated error categorization (DOM, API, TIMEOUT, ASSERTION, DATABASE)
- Performance bottleneck detection (tests >1000ms)
- Flaky test detection with status flip tracking
- Memory leak detection with configurable thresholds
- Real-time monitoring with callback system
- Minimal performance impact (<100ms overhead for 1000 tests)

### Error Categories with Actionable Recommendations
1. **DOM Errors**: Element not found, multiple elements, query issues
2. **API Errors**: Network failures, connection errors, request failures
3. **Timeout Errors**: Hanging tests, slow operations, unresolved promises
4. **Assertion Errors**: Failed assertions, value mismatches
5. **Database Errors**: Connection failures, query errors

### Performance Monitoring
- Execution time tracking with start/end lifecycle
- Bottleneck identification with configurable thresholds
- Performance trend analysis (improving/stable/degrading)
- Regression alerts with baseline comparison
- Memory usage tracking during test execution

### Test Coverage
Created comprehensive test suite with 44 tests covering:
- Logging functionality (6 tes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
+    "test:report": "tsx scripts/generate-test-report.ts",
+    "test:report:md": "tsx scripts/generate-test-report.ts --markdown",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
