Pass Stripe publishable key as build arg to Docker image
The Stripe publishable key must be baked into the Docker image at build time since it's a NEXT_PUBLIC_ variable that Next.js needs during the build process.

Changes:
- Add NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY as build arg in Dockerfile
- Pass the variable through Cloud Build in cloudbuild.yaml
- Update Terraform to pass the publishable key to Cloud Build
- Update terraform.tfvars with correct Stripe publishable key

--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -34,6 +34,7 @@ steps:
       - '--build-arg=BUILD_ENV=${_BUILD_ENV}'
       - '--build-arg=NEXTAUTH_URL=${_NEXTAUTH_URL}'
       - '--build-arg=NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL}'
+      - '--build-arg=NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}'
       - '-t=${_IMAGE_URL}-cache-builder'
       - '-f=frontend/Dockerfile'
       - './frontend'
@@ -49,6 +50,7 @@ steps:
       - '--build-arg=BUILD_ENV=${_BUILD_ENV}'
       - '--build-arg=NEXTAUTH_URL=${_NEXTAUTH_URL}'
       - '--build-arg=NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL}'
+      - '--build-arg=NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}'
       - '-t=${_IMAGE_URL}'
       - '-f=frontend/Dockerfile'
       - './frontend'
