--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,10 +17,12 @@ COPY . .
 ARG BUILD_ENV=production
 ARG NEXTAUTH_URL
 ARG NEXT_PUBLIC_SITE_URL
+ARG NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
 
 # Set environment variables for build
 ENV NEXTAUTH_URL=$NEXTAUTH_URL
 ENV NEXT_PUBLIC_SITE_URL=$NEXT_PUBLIC_SITE_URL
+ENV NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=$NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
 
 RUN pnpm build
 
