Remove redundant isTriggered column and simplify database tooling
- Remove isTriggered column from secrets table (use triggeredAt + status instead)
- Complete multi-recipient schema migration with new query layer
- Simplify package.json to only use native drizzle-kit commands
- Remove custom migration scripts and shell scripts
- Add dotenv to drizzle.config.ts for automatic .env.local loading
- Add dev tier toggle component for testing
- Update all tests to remove isTriggered references

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,31 +12,14 @@
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "test:report": "tsx scripts/generate-test-report.ts",
-    "test:report:md": "tsx scripts/generate-test-report.ts --markdown",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
-    "db:test": "tsx scripts/test-connection.ts",
-    "db:check-schema": "tsx scripts/check-migrations.ts",
-    "db:fix-schema": "tsx scripts/fix-secrets-schema.ts",
-    "db:migrate-to-current": "tsx scripts/migrate-schema-to-current.ts",
-    "db:test-schema": "tsx scripts/test-robust-service.ts",
-    "db:simple-test": "tsx scripts/simple-db-test.ts",
-    "db:validate-fix": "tsx scripts/validate-schema-fix.ts",
-    "db:test-migration": "tsx scripts/test-migration.ts",
-    "migrate": "tsx scripts/run-migrations.ts",
-    "migrate:make": "drizzle-kit generate",
-    "db:pool:start": "docker-compose -f docker-compose.pooling.yml up -d",
-    "db:pool:stop": "docker-compose -f docker-compose.pooling.yml down",
-    "db:pool:logs": "docker-compose -f docker-compose.pooling.yml logs -f",
-    "setup:cloud-sql": "./scripts/setup-cloud-sql.sh",
-    "setup:security": "./scripts/configure-cloud-sql-security.sh",
-    "debug:build": "node scripts/debug-build.js",
-    "test:build": "vitest run __tests__/build-configuration.test.ts",
-    "test:turbopack": "vitest run __tests__/turbopack-runtime.test.ts"
+    "db:drop": "drizzle-kit drop",
+    "db:introspect": "drizzle-kit introspect",
+    "db:up": "drizzle-kit up"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
@@ -89,6 +72,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.4.1",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
