--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -35,6 +35,7 @@ steps:
       - '--build-arg=NEXTAUTH_URL=${_NEXTAUTH_URL}'
       - '--build-arg=NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL}'
       - '--build-arg=NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}'
+      - '--build-arg=NEXT_PUBLIC_SUPPORT_EMAIL=${_NEXT_PUBLIC_SUPPORT_EMAIL}'
       - '-t=${_IMAGE_URL}-cache-builder'
       - '-f=frontend/Dockerfile'
       - './frontend'
@@ -51,6 +52,7 @@ steps:
       - '--build-arg=NEXTAUTH_URL=${_NEXTAUTH_URL}'
       - '--build-arg=NEXT_PUBLIC_SITE_URL=${_NEXT_PUBLIC_SITE_URL}'
       - '--build-arg=NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}'
+      - '--build-arg=NEXT_PUBLIC_SUPPORT_EMAIL=${_NEXT_PUBLIC_SUPPORT_EMAIL}'
       - '-t=${_IMAGE_URL}'
       - '-f=frontend/Dockerfile'
       - './frontend'
