Remove env files in migration to Doppler

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -10,15 +10,9 @@ NEXT_PUBLIC_SUPPORT_EMAIL=support@localhost
 
 # Database Configuration
 DATABASE_URL=postgresql://postgres:dev_password_change_in_prod@localhost:5432/keyfate_dev
-POSTGRES_DB=keyfate_dev
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=dev_password_change_in_prod
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
 
 # Application Secrets
 ENCRYPTION_KEY=generate-an-encryption-key
-JWT_SECRET=your-jwt-secret-here-change-in-production
 NEXTAUTH_SECRET=your-nextauth-secret-here
 NEXTAUTH_URL=http://localhost:3000
 
@@ -29,7 +23,7 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 # Email Configuration (SendGrid)
 SENDGRID_API_KEY=your-sendgrid-api-key
 SENDGRID_ADMIN_EMAIL=admin@localhost
-SENDGRID_SENDER_NAME=Dead Man's Switch Local
+SENDGRID_SENDER_NAME="Dead Man's Switch Local"
 
 # Payment Configuration (disabled in local)
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
@@ -43,11 +37,4 @@ BTCPAY_STORE_ID=
 BTCPAY_WEBHOOK_SECRET=
 
 # Development Features
-DEBUG_MODE=true
 NODE_ENV=development
-NEXT_PUBLIC_DEBUG=true
-
-# Local-specific overrides
-DISABLE_AUTH_REDIRECT=true
-SKIP_EMAIL_VERIFICATION=true
-MOCK_PAYMENTS=true
