Add environment-based pricing for BTCPay Server testing

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -3,7 +3,7 @@
 
 # Application Configuration
 NEXT_PUBLIC_COMPANY="Dead Man's Switch"
-NEXT_PUBLIC_ENV=local
+NEXT_PUBLIC_ENV=local # Options: local, development, staging, production
 NEXT_PUBLIC_PARENT_COMPANY="Local Development"
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_SUPPORT_EMAIL=support@localhost
@@ -31,6 +31,9 @@ STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
 # Bitcoin Payment (disabled in local)
+# Note: BTCPay pricing is environment-aware
+# - local/dev/staging: 10 sats monthly, 100 sats yearly (test pricing)
+# - production: 20,000 sats monthly, 200,000 sats yearly (production pricing)
 BTCPAY_API_KEY=
 BTCPAY_SERVER_URL=
 BTCPAY_STORE_ID=
